--- a/clockin.cabal
+++ b/clockin.cabal
@@ -26,3 +26,21 @@ library
                      filepath >= 1.3.0.0,
                      old-locale >= 1.0.0.0,
                      base >= 4 && <5
+
+test-suite test
+    type: exitcode-stdio-1.0
+    main-is: Test.hs
+    hs-source-dirs: src
+    build-depends: base,
+                   clockin,
+                   resourcet >= 0.4.9,
+                   aeson >= 0.6.2.0,
+                   bytestring >= 0.10.0.0,
+                   conduit >= 1.0.9.0,
+                   text >= 0.11.2.0,
+                   time >= 1.4.0.0,
+                   time-lens >= 0.3,
+                   directory >= 1.2.0.0,
+                   filepath >= 1.3.0.0,
+                   old-locale >= 1.0.0.0,
+                   base >= 4 && <5
