--- a/clockin.cabal
+++ b/clockin.cabal
@@ -18,7 +18,7 @@ library
   build-depends:     http-conduit >= 2.0.0.0,
                      safe >= 0.3.0,
                      resourcet >= 0.4.9,
-                     aeson >= 0.6.2.0,
+                     aeson == 0.6.*,
                      bytestring >= 0.10.0.0,
                      conduit >= 1.0.9.0,
                      text >= 0.11.2.0,
@@ -36,7 +36,7 @@ test-suite test
     build-depends: base,
                    clockin,
                    resourcet >= 0.4.9,
-                   aeson >= 0.6.2.0,
+                   aeson == 0.6.*,
                    bytestring >= 0.10.0.0,
                    conduit >= 1.0.9.0,
                    text >= 0.11.2.0,
@@ -53,7 +53,7 @@ executable clockin
     build-depends: base,
                    clockin,
                    resourcet >= 0.4.9,
-                   aeson >= 0.6.2.0,
+                   aeson == 0.6.*,
                    bytestring >= 0.10.0.0,
                    conduit >= 1.0.9.0,
                    text >= 0.11.2.0,
