Support mins/hours

--- a/clockin.cabal
+++ b/clockin.cabal
@@ -21,6 +21,7 @@ library
                      aeson == 0.6.*,
                      bytestring >= 0.10.0.0,
                      conduit >= 1.0.9.0,
+                     conduit-extra,
                      text >= 0.11.2.0,
                      time >= 1.4.0.0,
                      time-lens >= 0.3,
@@ -39,6 +40,7 @@ test-suite test
                    aeson == 0.6.*,
                    bytestring >= 0.10.0.0,
                    conduit >= 1.0.9.0,
+                   conduit-extra,
                    text >= 0.11.2.0,
                    time >= 1.4.0.0,
                    time-lens >= 0.3,
@@ -56,6 +58,7 @@ executable clockin
                    aeson == 0.6.*,
                    bytestring >= 0.10.0.0,
                    conduit >= 1.0.9.0,
+                   conduit-extra,
                    text >= 0.11.2.0,
                    time >= 1.4.0.0,
                    time-lens >= 0.3,
