--- a/clockin.cabal
+++ b/clockin.cabal
@@ -18,7 +18,7 @@ library
   build-depends:     http-conduit >= 2.0.0.0,
                      safe >= 0.3.0,
                      resourcet >= 0.4.9,
-                     aeson == 0.6.*,
+                     aeson >= 0.6,
                      bytestring >= 0.10.0.0,
                      conduit >= 1.0.9.0,
                      conduit-extra,
@@ -28,7 +28,7 @@ library
                      directory >= 1.2.0.0,
                      filepath >= 1.3.0.0,
                      old-locale >= 1.0.0.0,
-                     base >= 4 && <5
+                     base >= 4 && <5, time-locale-compat
 
 test-suite test
     type: exitcode-stdio-1.0
@@ -37,7 +37,7 @@ test-suite test
     build-depends: base,
                    clockin,
                    resourcet >= 0.4.9,
-                   aeson == 0.6.*,
+                   aeson >= 0.6,
                    bytestring >= 0.10.0.0,
                    conduit >= 1.0.9.0,
                    conduit-extra,
@@ -47,7 +47,7 @@ test-suite test
                    directory >= 1.2.0.0,
                    filepath >= 1.3.0.0,
                    old-locale >= 1.0.0.0,
-                   base >= 4 && <5
+                   base >= 4 && <5, time-locale-compat
 
 executable clockin
     main-is: Main.hs
@@ -55,7 +55,7 @@ executable clockin
     build-depends: base,
                    clockin,
                    resourcet >= 0.4.9,
-                   aeson == 0.6.*,
+                   aeson >= 0.6,
                    bytestring >= 0.10.0.0,
                    conduit >= 1.0.9.0,
                    conduit-extra,
@@ -65,4 +65,4 @@ executable clockin
                    directory >= 1.2.0.0,
                    filepath >= 1.3.0.0,
                    old-locale >= 1.0.0.0,
-                   base >= 4 && <5
+                   base >= 4 && <5, time-locale-compat
